--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
-	"id": "kinopoisk-search-plus",
-	"name": "Kinopoisk Search Plus",
+	"id": "kinopoisk-search-plus-plus",
+	"name": "Kinopoisk Search Plus-plus",
 	"version": "2.0.1",
 	"minAppVersion": "1.0.0",
 	"description": "Helps you find movies and tv shows via Kinopoisk and create notes.",
-	"author": "2PleXXX",
-	"authorUrl": "https://github.com/2PleXXX",
+	"author": "Yanoky1",
+	"authorUrl": "https://github.com/Yanoky1",
 	"isDesktopOnly": false
 }
